# warikan-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.aws  Dockerfile.local  README.md  compute.html  docker-compose.yml  login.html  pyproject.toml  setup.sh
app/: __init__.py  main.py
backend/: .env.example  CODE_REVIEW.md  Dockerfile.azure  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/routes/: home.py  payment.py  register.py
backend/app/auth/: auth.py
backend/app/db/: db.py
backend/app/schemas/: schemas.py
backend/app/services/: payment.py  payment_service.py  payments.py  register.py  services.py  settlement.py
backend/app/static/: compute.js  start.js
backend/app/templates/: about.html  compute.html  index.html  join_group.html  login.html  register_group.html  start.html
docs/: aws-deployment.md  azure-deployment.md
frontend/: about.html  compute.html  compute.js  index.html  join_group.html  login.html  register_group.html  start.html  start.js  style.css
mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  ib_buffer_pool
prototype/: Dockerfile  docker-compose.yml  (+1 more)
(+154 files in other folders)
