[project]
name = "warikan-app"
version = "0.1.0"
description = ""
authors = [
    {name = "hayashi1917",email = "kusagamebibinnba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "itsdangerous (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
